--- a/toefl/toefl.html
+++ b/toefl/toefl.html
@@ -29,7 +29,7 @@
   <!-- Top Navivation -->
   <nav id="topNav" class="w3-bar my-dark-blue w3-card w3-top w3-center">
     <a href="/toefl/tpo/tpo.html" class="w3-bar-item w3-button">TPO</a>
-    <a href="/toefl/notes/notes.html" class="w3-bar-item w3-button w3-hide-small">Notes</a>
+    <a href="/toefl/notes/notes.html" class="w3-bar-item w3-button">Notes</a>
     <div id="hideNav">
       <a href="/toefl/essay/essay.html" class="w3-bar-item w3-button w3-hide-small">Essay</a>
       <a href="/toefl/og/og.html" class="w3-bar-item w3-button w3-hide-small">OG</a>
