--- a/toefl/notes/og-example-writing1.html
+++ b/toefl/notes/og-example-writing1.html
@@ -23,21 +23,18 @@
 
   <!-- Top Navigation -->
   <nav id="topNav" class="w3-bar w3-black w3-card w3-center">
-    <a href="notes.html#notesHeader" class="w3-bar-item w3-button">HOME</a>
+    <a href="notes.html" class="w3-bar-item w3-button">HOME</a>
 
     <div id="hideNav">
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">TOEFL</a>
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">Reading</a>
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">Listening</a>
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">Speaking</a>
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">Writing</a>        
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">TOEFL</a>
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">Reading</a>
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">Listening</a>
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">Speaking</a>
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">Writing</a>        
     </div>
 
     <button class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" id="topNavBtn">&#9660;</button>
   </nav>
-
-  <br/>
-  <br/>
 
   <main>
 
@@ -45,9 +42,9 @@
     <div class="w3-card w3-margin w3-padding w3-white">
       <span>Tags:</span>
 
-      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html#notesHeader">TOEFL</a>
-      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html#notesHeader">Writing</a>
-      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html#notesHeader">Integrated</a>
+      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html">TOEFL</a>
+      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html">Writing</a>
+      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html">Integrated</a>
     </div>
 
     <!-- Reading Passage -->
