--- a/toefl/notes/og-example-writing2.html
+++ b/toefl/notes/og-example-writing2.html
@@ -21,19 +21,17 @@
 
   <!-- Top Navigation -->
   <nav id="topNav" class="w3-bar w3-black w3-card w3-center">
-    <a href="notes.html#notesHeader" class="w3-bar-item w3-button">HOME</a>
+    <a href="notes.html" class="w3-bar-item w3-button">HOME</a>
     <div id="hideNav">
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">TOEFL</a>
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">Reading</a>
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">Listening</a>
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">Speaking</a>
-      <a href="notes.html#notesHeader" class="w3-bar-item w3-button w3-hide-small">Writing</a>        
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">TOEFL</a>
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">Reading</a>
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">Listening</a>
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">Speaking</a>
+      <a href="notes.html" class="w3-bar-item w3-button w3-hide-small">Writing</a>        
     </div>
     <button class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" id="topNavBtn">&#9660;</button>
   </nav>
 
-  <br/>
-  <br/>
   
   <!-- w3-content defines a container for fixed size centered content, and is wrapped around the whole page content, except for the footer in this example -->
   <main>
@@ -41,10 +39,10 @@
     <!-- Ariticle tags -->
     <div class="w3-card w3-margin w3-padding w3-white">
       <span>Tags:</span>
-      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html#notesHeader">TOEFL</a>
-      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html#notesHeader">Writing</a>
-      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html#notesHeader">Independent</a>
-      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html#notesHeader">Trait</a>
+      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html">TOEFL</a>
+      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html">Writing</a>
+      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html">Independent</a>
+      <a class="w3-tag w3-black w3-btn w3-padding-small" href="notes.html">Trait</a>
     </div>
 
     <!-- Question -->
@@ -164,7 +162,7 @@
     <i class="fa fa-linkedin w3-hover-opacity"></i>
 
     <p>Powered by <a href="https://mygithubpage.github.io">GitHubPages</a></p>
-  </fotter>
+  </footer>
 
   <script>
     setTag(); // Add Top Navigation Button Click Event and Tag Click Event.
