--- a/toefl/notes/sample-question-writing2.html
+++ b/toefl/notes/sample-question-writing2.html
@@ -104,7 +104,7 @@
   </footer>
 
   <script>
-    setTag(); // Add Top Navigation Button Click Event and Tag Click Event.
+    initialize();
   </script>
 </body>
 
