--- a/toefl/notes/og-example-writing1.html
+++ b/toefl/notes/og-example-writing1.html
@@ -8,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  <link rel="stylesheet" href="../../style.css" />
+  <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://rawgit.com/isagalaev/highlight.js/master/src/styles/atom-one-light.css" />
 
-  <script src="../../external.js"></script>
+  <script src="/external.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
@@ -49,6 +49,10 @@
 
     <!-- Reading Passage -->
     <article class="w3-card w3-margin w3-white w3-container">
+      <div class="w3-right margin-top-small">
+        <span id="timeSpan"></span>
+        <button class="w3-btn w3-black" id="timerBtn">Start</button>
+      </div>
       <h4><b>Reading Passage</b></h4>
       <p>In many organizations, perhaps the best way to approach certain new projects is to assemble a group of people into a team. Having a team of people attack a project offers several advantages. First of all, a group of people has a wider range of knowledge, expertise, and skills than any single individual is likely to possess. Also, because of the numbers of people involved and the greater resources they possess, a group can work more quickly in response to the task assigned to it and can come up with highly creative solutions to problems and issues. Sometimes these creative solutions come about because a group is more likely to make risky decisions that an individual might not undertake. This is because the group spreads responsibility for a decision to all the members and thus no single individual can be held accountable if the decision turns out to be wrong.</p>
       <p>Taking part in a group process can be very rewarding for members of the team. Team members who have a voice in making a decision will no doubt feel better about carrying out the work that is entailed by that decision than they might doing work that is imposed on them by others. Also, the individual team member has a much better chance to "shine," to get his or her contributions and ideas not only recognized but recognized as highly significant, because a team's overall results can be more far-reaching and have greater impact than what might have otherwise been possible for the person to accomplish or contribute working alone.</p>
@@ -58,6 +62,7 @@
     <article class="w3-card w3-margin w3-white w3-container">
       <h4><b>Listening Lecture</b></h4>
       <audio src="ogew1.mp3" controls="controls"></audio>
+      
       <p><b>Professor</b></p>
       <p>Now I want to tell you about what one company found when it decided that it would turn over some of its new projects to teams of people, and make the team responsible for planning the projects and getting the work done. After about six months, the company took a look at how well the teams performed.</p>
       <p>On virtually every team, some members got almost a "free ride" . . . they didn't contribute much at all, but if their team did a good job, they nevertheless benefited from the recognition the team got. And what about group members who worked especially well and who provided a lot of insight on problems and issues? Well . . . the recognition for a job well done went to the group as a whole, no names were named. So it won't surprise you to learn that when the real contributors were asked how they felt about the group process, their attitude was just the opposite of what the reading predicts.</p>
@@ -147,7 +152,7 @@
   </footer>
 
   <script>
-    setTag(); // Add Top Navigation Button Click Event and Tag Click Event.
+    initialize();
   </script>
 </body>
 
