--- a/toefl/notes/sample-question-writing1.html
+++ b/toefl/notes/sample-question-writing1.html
@@ -120,7 +120,7 @@
   </footer>
 
   <script>
-    setTag(); // Add Top Navigation Button Click Event and Tag Click Event.
+    initialize();
   </script>
 </body>
 
