--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   </head>
 
-  <body class="w3-light-gray" title="w3-green">
+  <body class="w3-light-gray">
 
     <!-- Page Container -->
     <div class="w3-content w3-margin-top">
