--- a/toefl/tpo/tpo.html
+++ b/toefl/tpo/tpo.html
@@ -5,7 +5,7 @@
     <script src="/initialize.js">
     </script>
   </head>
-  <body title="my-crimson">
+  <body>
     <main>
       <div class="w3-container">
         <p>The official practice test for the TOEFL iBT test, using authentic past test questions, from ETS, the maker of the TOEFL test.</p>
