--- a/test.html
+++ b/test.html
@@ -1,64 +1,7 @@
-<html lang="en">
-
-<head>
-  <title>TPO31 Speaking 4</title>
-  <script src="/initialize.js"></script>
-</head>
-
-<body>
-  <main class="w3-container">
-    <section id="reading-text">
-      <h3>Reading Text</h3>
-      <article>
-        <h4 class="w3-center">Mental Accounting</h4>
-        <p>Although they may not realize it, people do not always manage their money in responsible way. In their minds, people
-          tend to divide their money into different categories as if they were putting it into separate mental bank accounts.
-          This tendency is known as mental accounting.People mentally store some money in one account to be saved, while
-          they imagine other money being stored in another account from which money can be taken and freely spent. Mental
-          accounting can lead people to spend more money than they should, which can make it difficult for them to save enough
-          money to achieve their long-term financial goals.</p>
-      </article>
-    </section>
-    <hr/>
-    <div>
-      <audio src="tpo31-speaking4.mp3" controls="controls"></audio>
-    </div>
-    <section id="listening-text">
-      <h3>Listening Text</h3>
-      <article>
-        <p>Narrator Now listen to part of a lecture in a psychology class. </p>
-        <p> </p>
-        <p>Professor </p>
-        <p>So a good example of this is something that happened to me. When I was younger, I had an office job and I worked
-          there every day during the week. And I made a regular salary from that. But also I worked as a waiter at a restaurant
-          each weekend, so I made some money from doing that. </p>
-        <p>Now, around this time, I decided I wanted to buy a house. So every time I got my regular paycheck from my job at
-          the office, I'd save as much of the money from it as I could after I bought the basic stuff I needed. But with
-          the money I made as a waiter that was another story.Somehow I guess that money seemed separate from the money I
-          earned at my regular job. So I used the money I made at the restaurant to go out to dinner, to buy videos or CDs,
-          things I didn't really need. </p>
-        <p>But the thing is, it ended up taking me a really long time to save up all the money I needed to buy the house. And
-          looking back now, I realize I could have bought the house a lot sooner if only I had saved more of the money I
-          made working at the restaurant. Task 5-Picking up Grandma & Review Session </p>
-        <p> </p>
-      </article>
-    </section>
-    <hr/>
-    <section id="sample-response">
-      <h4>Sample Response</h4>
-      <article>
-        <p>Mental accounting is a tendency that people divide their money into different categories in their mind and therefore
-          spend more money than they should have. The professor takes his personal experience. He used to have two jobs.
-          He had an office job on the weekdays and got regular paycheck from it; also he worked part-time in a restaurant
-          at weekends, which earned him some extra money. He decided to buy a house, so with the regular salary he earned
-          from his office job, he only bought daily necessities and then put aside as much as possible. But with the money
-          earned from the restaurant he wasn't so careful, spending it on dinner and buying unnecessary stuffs like CDs,
-          because through mental accounting, the part-time money was separate from his regular paycheck. As a result, it
-          took him longer time to get enough money for a house than he should have if he didn't spend the restaurant money.
-          (158 words)</p>
-      </article>
-    </section>
-  </main>
-</body>
-
-</html>
+<TestItem CLASS="view_this_passage_noquest">
+  <TPPassage>TPO52\Reading\TPO52R1.txt</TPPassage>
+  <PassageText>A large, swift stream or river can carry all sizes of particles, from clay to boulders. When the current slows down, its competence (how much it can carry) decreases and the stream deposits the largest particles in the streambed. If current velocity continues to decrease - as a flood wanes, for example - finer particles settle out on top of the large ones. Thus, a stream sorts its sediment according to size. A waning flood might deposit a layer of gravel, overlain by sand and finally topped by silt and clay. Streams also sort sediment in the downstream direction. Many mountain streams are choked with boulders and cobbles, but far downstream, their deltas are composed mainly of fine silt and clay. This downstream sorting is curious because stream velocity generally increases in the downstream direction. Competence increases with velocity, so a river should be able to transport larger particles than its tributaries carry. One explanation for downstream sorting is that abrasion wears away the boulders and cobbles to sand and silt as the sediment moves downstream over the years. Thus, only the fine sediment reaches the lower parts of most rivers.
+  A stream deposits its sediment in three environments: Alluvial fans and deltas form where stream gradient (angle of incline) suddenly decreases as a stream enters a flat plain, a lake, or the sea; floodplain deposits accumulate on a floodplain adjacent to the stream channel; and channel deposits form in the stream channel itself. Bars, which are elongated mounds of sediment, are transient features that form in the stream channel and on the banks. They commonly form in one year and erode the next. Rivers used for commercial navigation must be recharged frequently because bars shift from year to year. Imagine a winding stream. The water on the outside of the curve moves faster than the water on the inside. The stream erodes its outside bank because the current's inertia drives it into the outside bank. At the same time, the slower water on the inside point of the bend deposits sediment, forming a point bar. A mid-channel bar is a sandy and gravelly deposit that forms in the middle of a stream channel.
+  Most streams flow in a single channel. In contrast, a braided stream flows in many shallow, interconnecting channels. A braided stream forms where more sediment is supplied to a stream than it can carry. The stream dumps the excess sediment, forming mid-channel bars. The bars gradually fill a channel, forcing the stream to overflow its banks and erode new channels. As a result, a braided stream flows simultaneously in several channels and shifts back and forth across its floodplain. Braided streams are common in both deserts and glacial environments because both produce abundant sediment. A desert yields large amounts of sediment because it has little or no vegetation to prevent erosion. Glaciers grind bedrock into fine sediment, which is carried by streams flowing from the melting ice. If a steep mountain stream flows onto a flat plain, its gradient and velocity decrease sharply. As a result, it deposits most of its sediment in a fan-shaped mound called an alluvial fan. Alluvial fans are common in many arid and semiarid mountainous regions.
+  A stream also slows abruptly where it enters the still water of a lake or ocean. The sediment settles out to form a nearly flat landform called a delta. Part of the delta lies above water level, and the remainder lies slightly below water level. Deltas are commonly fan-shaped, resembling the Greek letter "delta" (∆). Both deltas and alluvial fans change rapidly. Sediment fills channels (waterways), which are then abandoned while new channels develop as in a braided stream. As a result, a stream feeding a delta or fan splits into many channels called distributaries. A large delta may spread out in this manner until it covers thousands of square kilometers. Most fans, however, are much smaller, covering a fraction of a square kilometer to a few square kilometers. The Mississippi River has flowed through seven different delta channels during the past 5,000 to 6,000 years. But in recent years, engineers have built great systems of levees (retaining walls) in attempts to stabilize the channels. </PassageText>
+</TestItem>
