--- a/toefl/notes/notes.html
+++ b/toefl/notes/notes.html
@@ -14,8 +14,8 @@
     <!-- Labels / tags -->
     <div id="tagDiv">
 
-      <div class="w3-padding w3-card my-color w3-large">
-        <span>Tags</span>
+      <div class="w3-bar w3-padding-small w3-card my-color w3-large">
+        <span class="w3-bar-item w3-padding-small">Tags</span>
       </div>
 
       <div class="w3-padding w3-card w3-white" id="tagsDiv">
@@ -26,10 +26,6 @@
     <div id="entries"></div>
 
   </main>
-
-  <script>
-
-  </script>
 
 </body>
 
