--- a/toefl/og/og.html
+++ b/toefl/og/og.html
@@ -8,7 +8,7 @@
   <body>
     <main class="w3-container">
 
-      <div>
+      <div id="description">
         <p>The bestselling official guide to the TOEFL iBT&#174; test, from ETS, the maker of the test! Now expanded with a fourth authentic TOEFL iBT practice test.</p>
         <p>The new <i>Official Guide to the TOEFL&#174; Test</i> is the best, most reliable guide to the test that is used to meet English-language proficiency requirements at more than 10,000 institutions worldwide, including top universities in Australia, Canada, the U.K. and the U.S. This completely updated fifth edition includes real <i>TOEFL</i> test questions for practice, as well as explanations of all four sections of the test. The guide provides learners with information on how to integrate reading, listening, speaking and writing skills in order to construct effective answers that demonstrate university-level English proficiency.</p>  
         <p>Inside you'll find:</p>
