--- a/toefl/notes/notes.html
+++ b/toefl/notes/notes.html
@@ -12,7 +12,7 @@
   <main class="w3-container">
 
     <!-- Labels / tags -->
-    <div id="tagDiv">
+    <div class="w3-section" id="tagDiv">
 
       <div class="w3-bar w3-padding-small w3-card my-color w3-large">
         <span class="w3-bar-item w3-padding-small">Tags</span>
