--- a/gre/og/og.html
+++ b/gre/og/og.html
@@ -9,12 +9,14 @@
     <main class="w3-container">
       
       <div class="w3-bar w3-margin">
-        <a href="to-do.html" class="w3-btn w3-margin-small my-color">To do</a>
-        <a href="vocabulary.html" class="w3-btn w3-margin-small my-color">Vocabulary</a>
+        <a href="to-do.html" class="w3-btn my-margin-small my-color">To do</a>
+        <a href="vocabulary.html" class="w3-btn my-margin-small my-color">Vocabulary</a>
       </div>
       <div class="w3-bar w3-margin">
-        <a href="verbal-examples.html" class="w3-btn w3-margin-small my-color">Verbal Examples</a>
-        <a href="verbal-easy.html" class="w3-btn w3-margin-small my-color">Verbal Easy</a>
+        <a href="verbal-examples.html" class="w3-btn my-margin-small my-color">Verbal Examples</a>
+        <a href="verbal-easy.html" class="w3-btn my-margin-small my-color">Verbal Easy</a>
+        <a href="verbal-medium.html" class="w3-btn my-margin-small my-color">Verbal Medium</a>
+        <a href="verbal-hard.html" class="w3-btn my-margin-small my-color">Verbal Hard</a>
       </div>
     </main>
   </body>
