--- a/gre/og/og.html
+++ b/gre/og/og.html
@@ -11,12 +11,32 @@
       <div class="w3-bar w3-margin">
         <a href="to-do.html" class="w3-btn my-margin-small my-color">To do</a>
         <a href="vocabulary.html" class="w3-btn my-margin-small my-color">Vocabulary</a>
+        <a href="gre-khan.html" class="w3-btn my-margin-small my-color">GRE Khan Academy</a>
+        <a href="analytical-writing.html" class="w3-btn my-margin-small my-color">Analytical Writing</a>
+        <a href="verbal-reasoning.html" class="w3-btn my-margin-small my-color">Verbal Reasoning</a>
+        <a href="quantitative-reasoning.html" class="w3-btn my-margin-small my-color">Quantitative Reasoning</a>
+        <a href="scoring-rubic.html" class="w3-btn my-margin-small my-color">Scoring Rubic</a>
       </div>
       <div class="w3-bar w3-margin">
+        <a href="argument-examples.html" class="w3-btn my-margin-small my-color">Argument Examples</a>
+        <a href="issue-example.html" class="w3-btn my-margin-small my-color">Issue Examples</a>
+
         <a href="verbal-examples.html" class="w3-btn my-margin-small my-color">Verbal Examples</a>
         <a href="verbal-easy.html" class="w3-btn my-margin-small my-color">Verbal Easy</a>
         <a href="verbal-medium.html" class="w3-btn my-margin-small my-color">Verbal Medium</a>
         <a href="verbal-hard.html" class="w3-btn my-margin-small my-color">Verbal Hard</a>
+        <a href="pq-reading-easy.html" class="w3-btn my-margin-small my-color">PQ Reading Easy</a>
+        <a href="pq-reading-medium.html" class="w3-btn my-margin-small my-color">PQ Reading Medium</a>
+        <a href="pq-reading-hard.html" class="w3-btn my-margin-small my-color">PQ Reading Hard</a>
+        <a href="pq-text-easy.html" class="w3-btn my-margin-small my-color">PQ Text Easy</a>
+        <a href="pq-text-medium.html" class="w3-btn my-margin-small my-color">PQ Text Medium</a>
+        <a href="pq-text-hard.html" class="w3-btn my-margin-small my-color">PQ Text Hard</a>
+        <a href="pq-sentence-easy.html" class="w3-btn my-margin-small my-color">PQ Sentence Easy</a>
+        <a href="pq-sentence-medium.html" class="w3-btn my-margin-small my-color">PQ Sentence Medium</a>
+        <a href="pq-sentence-hard.html" class="w3-btn my-margin-small my-color">PQ Sentence Hard</a>
+        <a href="pq-verbal-easy.html" class="w3-btn my-margin-small my-color">PQ Verbal Easy</a>
+        <a href="pq-verbal-medium.html" class="w3-btn my-margin-small my-color">PQ Verbal Medium</a>
+        <a href="pq-verbal-hard.html" class="w3-btn my-margin-small my-color">PQ Verbal Hard</a>
       </div>
     </main>
   </body>
