--- a/gre/og/to-do.html
+++ b/gre/og/to-do.html
@@ -16,6 +16,7 @@
       <h4><b>GitHub File Management</b></h4>
       <ul>
         <li><a href="http://http://docs.mathjax.org/en/latest/index.html">Mathjax Documentation</a> (TeX Reference) </li>
+        <li>http://www.sharewithu.com <b>chinese</b> gre forum</li>
         <li>javascript geometry (svg? canvas?)</li>
         <li>external.js</li>
         <li>og4</li>
