--- a/gre/og/verbal-easy.html
+++ b/gre/og/verbal-easy.html
@@ -39,7 +39,7 @@
         </div>
         <div class="answer" data-answer="A">
           <div class="explanation">
-            <p>The sentence contrasts the infant’s reactions, part of a normal developmental process, with future unhappiness and anxiety. The missing word describes signs of adolescent anxiety as they relate to the infant. Choice A is correct: “prophetic” signs, like har bingers, foretell future occurrences, and for the infant, adolescent anxiety is a future occurrence. Since an infant cannot literally display signs of adolescent anxiety, “normal,” “monotonous,” and “typical” are all incorrect. And “virtual” is incorrect, because virtual signs are not real signs, and what Kagan is denying is that the infant’s reactions are not real signs of later unhappiness. Thus the correct answer is prophetic (Choice A). </p>
+            <p>The sentence contrasts the infant’s reactions, part of a normal developmental process, with future unhappiness and anxiety. The missing word describes signs of adolescent anxiety as they relate to the infant. Choice A is correct: “prophetic” signs, like harbingers, foretell future occurrences, and for the infant, adolescent anxiety is a future occurrence. Since an infant cannot literally display signs of adolescent anxiety, “normal,” “monotonous,” and “typical” are all incorrect. And “virtual” is incorrect, because virtual signs are not real signs, and what Kagan is denying is that the infant’s reactions are not real signs of later unhappiness. Thus the correct answer is prophetic (Choice A). </p>
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
         </div>
         <div class="answer" data-answer="AE">
           <div class="explanation">
-            <p>The sentence tells us that there is a contrast between the way Simpson related to politics in his college years and how he related to politics later in life. So the choices that complete the blanks must contrast with each other. The part of the sentence beginning with “despite” indicates that Simpson’s relation to politics in his college years did not involve engagement in the political activity that was “rife.” Of the choices for Blank (ii), only “indifferent to” conveys that nonengagement. And of the choices for Blank (i), only “activism” supplies the required contrast with “indifferent to.” Thus the correct answer is activism (Choice A) and indifferent to (Choice E).</p>
+            <p>The sentence tells us that there is a contrast between the way Simpson related to politics in his college years and how he related to politics later in life. So the choices that complete the blanks must contrast with each other. The part of the sentence beginning with “despite” indicates that Simpson’s relation to politics in his college years did not involve engagement in the political activity that was “rife.” Of the choices for Blank (ii), only “indifferent to” conveys that non-engagement. And of the choices for Blank (i), only “activism” supplies the required contrast with “indifferent to.” Thus the correct answer is activism (Choice A) and indifferent to (Choice E).</p>
           </div>
         </div>
       </div>
@@ -173,7 +173,7 @@
         </div>
       </div>
       <div id="passage2" class="passage">
-        <p>Was Felix Mendelssohn (1809–1847) a great composer? On its face, the question seems absurd. One of the most gifted prodigies in the history of music, he produced his first masterpiece at sixteen. From then on, he was recognized as an artist of preternatural abilities, not only as a composer but also as a pianist and conductor. But Mendelssohn’s enduring popularity has often been at odds — sometimes quite sharply — with his criti cal standing. Despite general acknowledgment of his genius, there has been a noticeable reluctance to rank him with, say, Schumann or Brahms. As Haggin put it, Men delssohn, as a composer, was a “minor master … working on a small scale of emotion and texture.</p>
+        <p>Was Felix Mendelssohn (1809–1847) a great composer? On its face, the question seems absurd. One of the most gifted prodigies in the history of music, he produced his first masterpiece at sixteen. From then on, he was recognized as an artist of preternatural abilities, not only as a composer but also as a pianist and conductor. But Mendelssohn’s enduring popularity has often been at odds — sometimes quite sharply — with his critical standing. Despite general acknowledgment of his genius, there has been a noticeable reluctance to rank him with, say, Schumann or Brahms. As Haggin put it, Mendelssohn, as a composer, was a “minor master … working on a small scale of emotion and texture.</p>
       </div>
       <div id="question10" data-choice-type="select" data-passage="passage2">
         <div class="question">
@@ -237,7 +237,7 @@
         </div>
       </div>
       <div id="passage3" class="passage">
-        <p>While most scholarship on women’s employment in the United States recognizes that the Second World War (1939–1945) dramatically changed the role of women in the workforce, these studies also acknowledge that few women remained in manufacturing jobs once men returned from the war. But in agriculture, unlike other industries where women were viewed as temporary workers, women’s employment did not end with the war. Instead, the expansion of agriculture and a steady decrease in the number of male farmworkers combined to cause the industry to hire more women in the postwar years. Consequently, the 1950s saw a growing number of women engaged in farm labor, even though rhetoric in the popular media called for the return of women to domestic life.</p>
+        <p>While most scholarship on women’s employment in the United States recognizes that the Second World War (1939–1945) dramatically changed the role of women in the workforce, these studies also acknowledge that few women remained in manufacturing jobs once men returned from the war. But in agriculture, unlike other industries where women were viewed as temporary workers, women’s employment did not end with the war. Instead, the expansion of agriculture and a steady decrease in the number of male farm-workers combined to cause the industry to hire more women in the postwar years. Consequently, the 1950s saw a growing number of women engaged in farm labor, even though rhetoric in the popular media called for the return of women to domestic life.</p>
       </div>
       <div id="question14" data-choice-type="radio" data-passage="passage3">
         <div class="question">
