--- a/gre/og/verbal-examples.html
+++ b/gre/og/verbal-examples.html
@@ -9,13 +9,13 @@
 
 <body>
   <main class="w3-container">
-    <div id="passage1" class="passage">
-      <p>Reviving the practice of using elements of popular music in classical composition, an approach that had been in hibernation in the United States during the 1960s, composer Philip Glass (born 1937) embraced the ethos of popular music in his compositions. Glass based two symphonies on music by rock musicians David Bowie and Brian Eno, but the symphonies’ sound is distinctively his. Popular elements do not appear out of place in Glass’s classical music, which from its early days has shared certain harmonies and rhythms with rock music. Yet this use of popular elements has not made Glass a composer of popular music. His music is not a version of popular music packaged to attract classical listeners; it is high art for listeners steeped in rock rather than the classics.</p>
-    </div>
-  
     <div id="questions">
 
-      <div id="question1" class="reading-comprehension" data-choice-type="radio" data-passage="1">
+      <div id="passage1" class="passage">
+        <p>Reviving the practice of using elements of popular music in classical composition, an approach that had been in hibernation in the United States during the 1960s, composer Philip Glass (born 1937) embraced the ethos of popular music in his compositions. Glass based two symphonies on music by rock musicians David Bowie and Brian Eno, but the symphonies’ sound is distinctively his. Popular elements do not appear out of place in Glass’s classical music, which from its early days has shared certain harmonies and rhythms with rock music. Yet this use of popular elements has not made Glass a composer of popular music. His music is not a version of popular music packaged to attract classical listeners; it is high art for listeners steeped in rock rather than the classics.</p>
+      </div>
+
+      <div id="question1" data-choice-type="radio" data-passage="passage1">
         <div class="question">
           <p>The passage addresses which of the following issues related to Glass’s use of popular elements in his classical compositions?</p>
         </div>
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <div id="question2" class="reading-comprehension" data-choice-type="checkbox" data-passage="1">
+      <div id="question2" data-choice-type="checkbox" data-passage="passage1">
         <div class="question">
           <p>The passage suggests that Glass’s work displays which of the following qualities?</p>
         </div>
@@ -49,7 +49,7 @@
         </div>
       </div>
 
-      <div id="question3" class="reading-comprehension" data-choice-type="select" data-passage="1">
+      <div id="question3" data-choice-type="select" data-passage="passage1">
         <div class="question">
           <p>Select the sentence that distinguishes two ways of integrating rock and classical music.</p>
         </div>
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div id="question4" class="sentence-equivalence">
+      <div id="question4" data-choice-type="checkbox">
         <div class="question">
           <p>Although it does contain some pioneering ideas, one would hardly characterize the work as __________. </p>
         </div>
@@ -79,7 +79,7 @@
         </div>
       </div>
 
-      <div id="question5" class="sentence-equivalence">
+      <div id="question5" data-choice-type="checkbox">
         <div class="question">
           <p>It was her view that the country’s problems had been _______ by foreign technocrats, so that to ask for such assistance again would be counterproductive.</p>
         </div>
@@ -98,7 +98,7 @@
         </div>
       </div>
       
-      <div id="question6" class="text-completion">
+      <div id="question6" data-choice-type="radio">
         <div class="question">
           <p>It is refreshing to read a book about our planet by an author who does not allow facts to be (i)__________ by politics: well aware of the political disputes about the effects of human activities on climate and biodiversity, this author does not permit them to (ii)__________ his comprehensive description of what we know about our biosphere. He emphasizes the enormous gaps in our knowledge, the sparseness of our observations, and the (iii)__________, calling attention to the many aspects of planetary evolution that must be better understood before we can accurately diagnose the condition of our planet.</p>
         </div>
@@ -124,7 +124,7 @@
         </div>
       </div>
 
-      <div id="question7" class="text-completion">
+      <div id="question7" data-choice-type="radio">
         <div class="question">
           <p>Vain and prone to violence, Caravaggio could not handle success: the more his (i)__________ as an artist increased, the more (ii)__________ his life became.</p>
         </div>
@@ -145,7 +145,7 @@
         </div>
       </div>  
 
-      <div id="question8" class="text-completion">
+      <div id="question8" data-choice-type="radio">
         <div class="question">
           <p>In parts of the Arctic, the land grades into the landfast ice so _______ that you can walk off the coast and not know you are over the hidden sea.</p>
         </div>
