--- a/gre/og/to-do.html
+++ b/gre/og/to-do.html
@@ -10,12 +10,27 @@
 
       <h4><b>Daily</b></h4>
       <ul>
-        <li><a href="http://www.mhpracticeplus.com/tests/GRE2016/index.html">MH GRE Practice Online</a></li>
-        <li>khan academy Arithmetic, Algebra, Geometry, Probability and Statistics</li>
+        <li>
+          <p><b>Begin</b></p>
+          <ul>
+            <li><b>recite</b> words</li>
+            <li>add content from <b>e-book</b> to html</li>
+            <li>edit <b>code</b> in GRE HTML, Word Set ps1, external.js</li>
+            <li><b>khan academy</b> Algebra, Geometry, Probability and Statistics</li>
+          </ul>
+        </li>
+        <li>
+          <p><b>Process</b></p>
+          <ul>
+            <li>read <b>e-book strategy</b> part</li>
+            <li>read previous verbal set to <b>warm up</b></li>
+          </ul>
+        </li>
       </ul>
-
+      
       <h4><b>GitHub File Management</b></h4>
       <ul>
+        <li><a href="http://www.mhpracticeplus.com/tests/GRE2016/index.html">MH GRE Practice Online</a></li>
         <li><a href="http://http://docs.mathjax.org/en/latest/index.html">Mathjax Documentation</a> (TeX Reference) </li>
         <li>http://www.sharewithu.com <b>chinese</b> gre forum</li>
         <li>javascript geometry (svg? canvas?)</li>
