--- a/gre/og/vocabulary.html
+++ b/gre/og/vocabulary.html
@@ -4,6 +4,7 @@
 <head>
   <title></title>
   <script src="/initialize.js"></script>
+  <script src="../../variable.js"></script>
 </head>
 
 <body>
@@ -11,6 +12,7 @@
   <main class="w3-container">
 
     <section>
+      <div class="w3-hide vocabulary" id="pq-verbal-easy">sinister impediments</div>
     </section>
 
   </main>
