--- a/gre/mh/mh-verbal-es2.html
+++ b/gre/mh/mh-verbal-es2.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html[]>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -409,6 +409,89 @@
           <div class="explanation">
             <p>21. C and E The word in the blank provides a description of the controversial policy. What impact would the record number of high school graduates have on the policy? It would most likely redeem it. Of the choices, the words closest in meaning to redeem are vindicated and justified.
             </p>
+          </div>
+        </div>
+      </div>
+      <div id="passage1" class="passage">
+        <p>One of the key necessities for understanding an organism’s evolutionary history is the identification of the habitats in which the organism’s ancestors thrived. Biologists have developed such techniques as radiocarbon dating and biochronology to date fossils and thereby arrive at an approximate range for an organism’s existence. But knowing that an organism existed during a certain time period says little about the environment that the organism inhabited. Since the earth periodically goes through heating and cooling periods, biologists cannot simply assume that a region’s current climate is the same as it was for, say, a lemur that inhabited that region six million years ago.</p>
+        <p>To get past this quandary, biologists study the fossils of foraminifera, which are microscopic organisms suspended in the waters of the world’s oceans. Foraminifera consume two types of oxygen isotope: oxygen-16 and oxygen-18. Oxygen-16 is lighter than oxygen-18, and as global temperatures rise, more oxygen-16 than oxygen-18 evaporates. By studying the fossils of foraminifera, researchers are able to identify the concentrations of these two isotopes at a given time. Researchers can then use the different ratios of the two isotopes during different time periods to make highly educated inferences about the global climate during a specific time period.</p>
+      </div>
+      <div id="question22" data-choice-type="radio" data-passage="passage1">
+        <div class="question">In the context in which it appears, “quandary” most nearly means</div>
+        <div class="choices">
+          <p>A investigation</p>
+          <p>B dilemma</p>
+          <p>C conjecture</p>
+          <p>D approximation</p>
+          <p>E surprise</p>
+        </div>
+        <div class="answer" data-answer="B">
+          <div class="explanation">
+            <p>3. B The author refers to “this quandary” when discussing the problem confronting biologists who want to determine the environmental habitat of the species whose fossils they have discovered. A good prediction for the answer would thus be problem. Of the choices, the word closest in meaning to problem is dilemma. </p>
+          </div>
+        </div>
+      </div>
+      <div id="question23" data-choice-type="radio" data-passage="passage1">
+        <div class="question">The passage is primarily concerned with</div>
+        <div class="choices">
+          <p>A introducing a problem and explaining a technique for addressing it</p>
+          <p>B highlighting the different ways that two types of chemicals can be used</p>
+          <p>C evaluating the usefulness of a scientific strategy</p>
+          <p>D introducing a scientific finding and discussing its implications</p>
+          <p>E explaining a difficulty faced by scientists</p>
+        </div>
+        <div class="answer" data-answer="A">
+          <div class="explanation">
+            <p>4. A In the first paragraph, the author introduces a problem that scientists face (namely, determining the climate of the habitats of ancient species). In the second paragraph, the author discusses a technique developed to address this problem. </p>
+          </div>
+        </div>
+      </div>
+      <div id="question24" data-choice-type="checkbox" data-passage="passage1">
+        <div class="question">Which of the following can be inferred from the passage?</div>
+        <div class="choices">
+          <p>A During a heating period, the ratio of oxygen-16 to oxygen-18 in the ocean decreases.</p>
+          <p>B Foraminifera can be useful in identifying the age of various fossils.</p>
+          <p>C Radioactive dating and biochronology use similar mechanisms to draw their conclusions.</p>
+        </div>
+        <div class="answer" data-answer="A">
+          <div class="explanation">
+            <p>5. A The author states that “as global temperatures rise, more oxygen-16 than oxygen-18 evaporates.” This statement implies that during heating periods, there is relatively less oxygen-16 in the ocean. It thus follows that the ratio of oxygen-16 to oxygen-18 must decrease. </p>
+          </div>
+        </div>
+      </div>
+      <div id="passage2" class="passage">
+        <p>Business has always been a popular major for students at four-year universities. However, over the past 20 years, the percentage of students at four-year universities who major in business has decreased from 35% to 23%. Clearly, fewer students are majoring in business now than they did 20 years ago. </p>
+      </div>
+      <div id="question25" data-choice-type="radio" data-passage="passage2">
+        <div class="question">Which of the following, if true, most weakens the conclusion?</div>
+        <div class="choices">
+          <p>A Many students who consider majoring in business end up majoring in related disciplines.</p>
+          <p>B When surveyed, most students state that they major in business because it is lucrative.</p>
+          <p>C The percentage of students majoring in disciplines related to business has decreased over the past 20 years.</p>
+          <p>D Fewer employers seek students with business degrees now than was the case 20 years ago.</p>
+          <p>E The number of students enrolled at four-year universities has increased over the past 20 years.</p>
+        </div>
+        <div class="answer" data-answer="E">
+          <div class="explanation">
+            <p>13. E The passage’s conclusion is that “fewer students are majoring in business now than they did 20 years ago.” This claim is based on the fact that the percentage of students majoring in business has decreased over the past 20 years. The claim uses a percentage to draw a conclusion about an actual value. If it turns out that the number of students enrolled at these colleges had also increased, then the decrease in the percentage would not necessarily lead to a decrease in the number of students majoring in business. The correct answer is thus E. </p>
+          </div>
+        </div>
+      </div>
+      <div id="passage3" class="passage">
+        <p>Executives at company X are wrong to conclude that the company will see an increase in profits over the next several years. Though it is true that the company’s profits increased each of the past five years, many competitors have entered the market during this time period. The competitors have used these past few years to develop products that will directly compete with company X’s products during the next several years. </p>
+      </div>
+      <div id="question26" data-choice-type="radio" data-passage="passage3">
+        <div class="question">In the preceding argument, the two portions in boldface play which of the following roles?</div>
+        <div class="choices">
+          <p>A The first provides a consideration that argues against the main conclusion of the argument; the second is that conclusion.</p>
+          <p>B The first provides evidence for the main conclusion of the argument; the second supports an intermediate conclusion in the argument.</p>
+          <p>C The first provides a consideration that argues against the main conclusion of the argument; the second provides evidence that supports the argument’s main conclusion.</p>
+          <p>D The first provides an intermediate conclusion in the argument; the second provides evidence that supports the argument’s main conclusion.</p>
+          <p>E The first provides an intermediate conclusion in the argument; the second provides evidence against that intermediate conclusion.</p>
+        </div>
+        <div class="answer" data-answer="C">
+          <div class="explanation">
+            <p>14. C The main conclusion of the argument is “Executives at company X are wrong to conclude that the company will see an increase in profits over the next several years.” This conclusion is supported by the evidence that competitors have recently entered the market and have developed products that will compete with Company X. A consideration against the conclusion is that profits increased in each of the five years. The first boldface is thus against the main conclusion, and the second boldface is in support of the main conclusion. The correct answer is Choice C. </p>
           </div>
         </div>
       </div>
