--- a/gre/mh/mh-verbal-es3.html
+++ b/gre/mh/mh-verbal-es3.html
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html[]>
-<html lang="en">1
+﻿<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <title></title>
@@ -384,6 +384,82 @@
         <div class="answer" data-answer="AE">
           <div class="explanation">
             <p>31. A and E The word in the blank describes how capitalism is viewed. If the word in the blank implies the belief that capital increases well-being, then capitalism must be glorified. Of the choices, the words closest in meaning to glorified are apotheosis and deification.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div id="passage1" class="passage">
+        <p>A detailed look into the past 13,000 years of human history reveals an important trend. The ascent of European civilization and its conquest of other cultures is not a result of some sort of inborn superiority on the part of the European conquerors. Rather, this cultural “success” is attributable to the confluence of favorable environmental conditions and fortuitous cultural events. Or so argues Diamond, in his wellreceived analysis of the Western world’s rise to dominance.</p>
+        <p>Diamond provides a wealth of data to support his point. Citing variables as varied as the mineral composition of a local region, fluctuations in weather, and access to docile animals, he argues that the development and evolution of any civilization is contingent on external variables. Since these variables are inherently uncontrollable, the civilizations for which these factors were aligned favorably were the ones that were most likely to thrive. Though Diamond’s use of detailed evidence is refreshing, and his ability to use such disparate information to draw broad conclusions is creative, it is the sweeping nature of his conclusions that makes his argument problematic. The very act of making inferences about local environments thousands of years ago is fraught with the potential for error, but Diamond gives little weight to these concerns. Indeed, by placing excessive emphasis on this data, he paints a simplistic portrait of the past 13,000 years of human history that only passingly acknowledges the roles of the individual human actors and their cultures. Paradoxically, in rightfully trying to debunk myths about Eurasian supremacy, Diamond marginalizes the cultures that he is attempting to defend.</p>
+      </div>
+      <div id="question21" data-choice-type="radio" data-passage="passage1">
+        <div class="question">The author of the passage is primarily concerned with</div>
+        <div class="choices">
+          <p>A highlighting the importance of certain cultural trends</p>
+          <p>B introducing and evaluating a theory about why civilizations thrive</p>
+          <p>C explaining the role of data in making predictions</p>
+          <p>D discussing the factors that shape the evolution of a civilization</p>
+          <p>E analyzing the critical reception of a recent theory </p>
+        </div>
+        <div class="answer" data-answer="B">
+          <div class="explanation">
+            <p>6. B In the first paragraph, the author introduces Diamond’s theory. In the second paragraph, the author evaluates the theory by noting its logical shortcomings. </p>
+          </div>
+        </div>
+      </div>
+      <div id="question22" data-choice-type="radio" data-passage="passage1">
+        <div class="question">The author most likely mentions “the mineral composition of a local region, fluctuations in weather, and access to docile animals” in order to</div>
+        <div class="choices">
+          <p>A provide examples that Diamond uses to support his theory</p>
+          <p>B suggest that Diamond’s theory is simplistic</p>
+          <p>C analyze the logical cohesiveness of Diamond’s theory</p>
+          <p>D highlight the factors relevant to a civilization’s ascent</p>
+          <p>E rebut Diamond’s central thesis</p>
+        </div>
+        <div class="answer" data-answer="A">
+          <div class="explanation">
+            <p>7. A The author mentions these data as examples of what Diamond uses to support his point. </p>
+          </div>
+        </div>
+      </div>
+      <div id="question23" data-choice-type="radio" data-passage="passage1">
+        <div class="question">In the context in which it appears, “fraught” most nearly means</div>
+        <div class="choices">
+          <p>A defined</p>
+          <p>B regarded</p>
+          <p>C determined</p>
+          <p>D rife</p>
+          <p>E coincided</p>
+        </div>
+        <div class="answer" data-answer="D">
+          <div class="explanation">
+            <p>8. D The author uses the word “fraught” in reference to what the author believes is an erroneous assumption made by Diamond. Since the author is conveying his belief that Diamond’s thinking is flawed, he probably thinks that Diamond’s thinking is full of error. Of the choices, the word closest in meaning to full is rife. </p>
+          </div>
+        </div>
+      </div>
+      <div id="question24" data-choice-type="select" data-passage="passage1">
+        <div class="question">Select the sentence in the passage in which the author introduces a position that Diamond’s book challenges.</div>
+        <div class="answer" data-answer="2">
+          <div class="explanation">
+            <p>9. 2 Although the author devotes much of the passage to evaluating Diamond’s theory, he starts off by mentioning the line of thought that Diamond challenges. This line of thought is found in sentence </p>
+          </div>
+        </div>
+      </div>
+      <div id="passage2" class="passage">
+        <p>Analyst: Sepoma, a major furniture manufacturer, had a large decline in sales revenue last year. However, this report is unexpected. Furniture retailers have stated that although overall sales of furniture decreased last year, sales of Sepoma furniture actually increased. </p>
+      </div>
+      <div id="question25" data-choice-type="radio" data-passage="passage2">
+        <div class="question">Which of the following, if true, best explains the unexpected situation above?</div>
+        <div class="choices">
+          <p>A Much of Sepoma’s revenue comes from making parts for other furniture manufacturers.</p>
+          <p>B Last year, Sepoma spent more on advertising than it usually does.</p>
+          <p>C Sepoma’s decline in revenue was less than the average decline in revenue for its major competitors.</p>
+          <p>D When revenues are weak, Sepoma is reluctant to find ways to cut costs.</p>
+          <p>E In a survey, potential buyers of furniture indicated that they thought Sepoma furniture was superior to that of most other brands on the market.</p>
+        </div>
+        <div class="answer" data-answer="A">
+          <div class="explanation">
+            <p>15. A First, identify what is unexpected about the situation. Sepoma’s revenues decreased even though sales of its furniture increased. How could this be the case? Sepoma must have sources of revenue other than its own furniture. Choice A is the correct answer because it shows that Sepoma makes money by selling parts to other manufacturers. If the revenue for the furniture of those other manufacturers decreased, then Sepoma’s revenue would have decreased as well.
             </p>
           </div>
         </div>
