--- a/gre/mh/mh.html
+++ b/gre/mh/mh.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <main class="w3-container">
-      <div class="w3-hide">provocative antipathy A imperturbability B indigence C aestheticism D equanimity E diligence F virulence \s([A-F]\s)?</div>
       <div class="w3-bar my-margin">        
+        <a href="mh-argument-example.html" class="w3-btn my-margin-small my-color">Argument Examples</a>
+        <a href="mh-issue-example.html" class="w3-btn my-margin-small my-color">Issue Examples</a>
+        <a href="mh-verbal-example.html" class="w3-btn my-margin-small my-color">Verbal Example</a>
         <a href="mh-verbal-es1.html" class="w3-btn my-margin-small my-color">Verbal Exercises 1</a>
         <a href="mh-verbal-es2.html" class="w3-btn my-margin-small my-color">Verbal Exercises 2</a>
         <a href="mh-verbal-es3.html" class="w3-btn my-margin-small my-color">Verbal Exercises 3</a>
