--- a/gre/notes/gre-khan.html
+++ b/gre/notes/gre-khan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Example Issue</title>
+  <title>Khan Academy For GRE</title>
   <script src="/initialize.js">
   </script>
 </head>
