--- a/gre/notes/to-do.html
+++ b/gre/notes/to-do.html
@@ -28,8 +28,10 @@
         </li>
       </ul>
       
-      <h4><b>GitHub File Management</b></h4>
+      <h4><b>Later</b></h4>
       <ul>
+        <li> <b>https://gre.etest.net.cn/login.do?lang=en_US</b> - <b>chinese</b> gre registration</li>
+        <li><a href="https://www.kaptest.com/gre/free/gre-practice">Kaplan Free GRE Practice</a></li>
         <li><a href="http://www.mhpracticeplus.com/tests/GRE2016/index.html">MH GRE Practice Online</a></li>
         <li><a href="http://http://docs.mathjax.org/en/latest/index.html">Mathjax Documentation</a> (TeX Reference) </li>
         <li>http://www.sharewithu.com <b>chinese</b> gre forum</li>
@@ -52,7 +54,7 @@
       <h4><b>Lifelong Learning</b></h4>
       <ul>
         <li>
-          <p><b>Khan Academy</b></p>
+          <p><b><a href="http://khanacademy.org">Khan Academy</a></b></p>
           <ul>
             <li>play video while working using laptop</li>
             <li>do exercise in <b>Practice</b> tab - watch video using browser private tab if stucked</li>
@@ -61,13 +63,43 @@
           </ul>
         </li>
         <li>
-          <p><b>Edx</b></p>
+          <p><b><a href="http://edx.org">Edx</a></b></p>
           <ul>
             <li></li>
           </ul>
         </li>
         <li>
-          <p><b>Coursera</b></p>
+          <p><b><a href="http://coursera.org">Coursera</a></b></p>
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+        <li>
+          <p><b><a href="http://safaribooksonline.com">SafariBooksOnline</a></b></p>
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+        <li>
+          <p><b><a href="https://www.pearson.com">Pearson</a></b></p>
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+        <li>
+          <p><b><a href="https://www.elsevier.com">Elsevier</a></b></p>
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+        <li>
+          <p><b><a href="https://www.mheducation.com">MH Education</a></b></p>
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+        <li>
+          <p><b><a href="https://www.elsevier.com">MIT Press</a></b></p>
           <ul>
             <li></li>
           </ul>
