--- a/gre/mh/mh-verbal-es1.html
+++ b/gre/mh/mh-verbal-es1.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html[]>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -368,6 +368,88 @@
           <div class="explanation">
             <p>10. A and C The word in the blank describes the employee. The contrast clue “far from” indicates that the employee behaved in a manner that contrasts with the way someone “discouraged” behaves. A good prediction would be persistent. The words that most closely match persistent are tenacious and plucky.
             </p>
+          </div>
+        </div>
+      </div>
+      <div id="passage1" class="passage">
+        <p>When Tocqueville came to America in 1831, he expressed a sentiment that is echoed in the works of Bloom and Kennedy: that American democracy, by encouraging dissent, can lead to its own undoing. But in contrast to the pessimism that dominates Bloom’s and Kennedy’s thinking, Tocqueville’s analysis went a step further. While acknowledging the seeming inevitability of dissent among the citizenry, he also recognized that beneath this frustration there lay a fundamental belief that democratic politics would ultimately amend the situations that aroused complaint. As Tocqueville noted, at any given point in time democracy can appear chaotic, shallow, and contradictory. But, he noted, it was never stagnant. For Tocqueville, democracy’s tendency to encourage and accommodate discontent was its greatest virtue. Because it is self-correcting, a properly run democratic system would ultimately benefit from any discontent because the system is designed to rectify the problem.</p>
+      </div>
+      <div id="question21" data-choice-type="radio" data-passage="passage1">
+        <div class="question">The author mentions Tocqueville’s belief that democracy “was never stagnant” to</div>
+        <div class="choices">
+          <p>A highlight Tocqueville’s belief in the self-correcting nature of democracy</p>
+          <p>B introduce a difference between Tocqueville’s thinking and that of Bloom and Kennedy</p>
+          <p>C explain why Tocqueville believes citizens of democratic nations are often upset</p>
+          <p>D suggest ways to eliminate the frustration of the citizens of democratic nations</p>
+          <p>E imply that many of the concerns of democratic citizens are baseless</p>
+        </div>
+        <div class="answer" data-answer="A">
+          <div class="explanation">
+            <p>1. A The author uses this line when elaborating on Tocqueville’s argument that democracy would benefit from dissent. Tocqueville believed that democracy could tolerate and benefit from dissent because it is self-correcting. The fact that it is “never stagnant” is in support of its self-correcting nature. </p>
+          </div>
+        </div>
+      </div>
+      <div id="question22" data-choice-type="radio" data-passage="passage1">
+        <div class="question">It can be inferred from the passage that Tocqueville agrees with Bloom and Kennedy about which of the following?</div>
+        <div class="choices">
+          <p>A Democracy is the ideal form of government.</p>
+          <p>B Discontent is inherent in any democracy.</p>
+          <p>C Democracy can only function when its citizens express concern over important issues.</p>
+          <p>D Democracy’s greatest virtue is its adaptability.</p>
+          <p>E If not properly run, democracy can undermine itself. </p>
+        </div>
+        <div class="answer" data-answer="B">
+          <div class="explanation">
+            <p>2. B All three authors agree that there will be dissent in a democracy. However, they disagree on the consequences of this dissent. </p>
+          </div>
+        </div>
+      </div>
+      <div id="passage2" class="passage">
+        <p>Lucian Freud famously remarked that anything he might say about his art is as relevant to the art as the noise a tennis player emits when hitting a ball. Freud presented this analogy as a way of capturing his belief about the relationship between artist and art: It is the art that lends significance to the artist, and not the other way around. Such a view, while unorthodox for any epoch, was especially so for the time period in which Freud created his major works. In the 20th-century, the lines between art and consumer culture became blurred, and selfpromotion became de rigueur for most major artists of the period. Freud’s tendency to deflect attention is not, as some commentators have stated, wholly a by-product of a desire to prevent encroachments into his personal life. Rather, it is predominantly a function of his deep-seated belief that if one’s art is given a place of prominence, the careful critic will be able to discern the thought processes and motivations of the artist.</p>
+      </div>
+      <div id="question23" data-choice-type="radio" data-passage="passage2">
+        <div class="question">Which of the following situations is most in line with Freud’s belief about “the relationship between artist and art”?</div>
+        <div class="choices">
+          <p>A A sculptor who refuses to be interviewed because she values her anonymity.</p>
+          <p>B A potter who refers to her creations when asked personal questions.</p>
+          <p>C A muralist who uses scenes from her own life in her creations.</p>
+          <p>D A composer who acknowledges others’ influences on her compositions.</p>
+          <p>E A novelist who writes novels that take place several centuries ago.</p>
+        </div>
+        <div class="answer" data-answer="0">
+          <div class="explanation">
+            <p>2. 10. B Freud believes that “it is the art that lends significance to the artist, and not the other way around.” He uses this fact as justification for giving his art prominence over his personal life. The situation that most closely matches the this notion is Choice B. </p>
+          </div>
+        </div>
+      </div>
+      <div id="question24" data-choice-type="checkbox" data-passage="passage2">
+        <div class="question">The information in the passage supports which of the following as reasons for Freud’s rejection of self-promoting techniques?</div>
+        <div class="choices">
+          <p>A A desire to maintain his privacy</p>
+          <p>B A desire to rebel against what was considered conventional behavior of 20th-century artists</p>
+          <p>C The belief that the art held more significance than the artist who created it</p>
+        </div>
+        <div class="answer" data-answer="AC">
+          <div class="explanation">
+            <p>11. A and C Choice A: The author states “Freud’s tendency to deflect attention is not, as some commentators have stated, wholly a by-product of a desire to prevent encroachments into his personal life.” The use of the word “wholly” implies that his rejection of self-promotion is somewhat motivated by a desire to maintain his privacy. Thus Choice A is correct. Choice B: Though Freud’s beliefs about art were unorthodox for a 20th-century artist, nothing in the passage suggests that a desire to be unorthodox motivated his rejection of self-promotion. Thus Choice B is incorrect. Choice C: The passage implies that Freud rejected self-promotion because he wanted to give his art “a place of prominence.” Thus Choice C is correct. </p>
+          </div>
+        </div>
+      </div>
+      <div id="passage3" class="passage">
+        <p>Gorland is considering a law that will allow the advertising of prescription medications. Critics of the practice worry that people who see these advertisements will seek out inappropriate prescriptions and thereby endanger their health. However, advertisers believe that since doctors ultimately decide whether to prescribe a given medication to a patient, these concerns are unfounded. </p>
+      </div>
+      <div id="question25" data-choice-type="radio" data-passage="passage3">
+        <div class="question">In responding to the critics’ concerns, which of the following is an assumption that the advertisers must make?</div>
+        <div class="choices">
+          <p>A The majority of people seeking medical care have seen advertisements for prescriptions.</p>
+          <p>B The advertisements for prescription medications are designed to deceive consumers.</p>
+          <p>C People seeking health care often attempt to diagnose themselves before seeing a doctor.</p>
+          <p>D Doctors will not be swayed by patients seeking inappropriate prescriptions.</p>
+          <p>E Not all doctor visits are for the purpose of obtaining medication. </p>
+        </div>
+        <div class="answer" data-answer="D">
+          <div class="explanation">
+            <p>12. D The author argues that “these concerns are unfounded” based on the fact that doctors have the ultimate say on whether to prescribe medication to a patient. For this argument to be valid, it must be assumed that the patients seeking inappropriate medications will not be able to convince the doctor to prescribe the unnecessary medications. If these patients were able to convince the doctor, then even though the doctor has the ultimate say, the critics’ concerns would be legitimate. </p>
           </div>
         </div>
       </div>
