--- a/gre/og/og.html
+++ b/gre/og/og.html
@@ -7,27 +7,15 @@
   </head>
   <body>
     <main class="w3-container">
-      
-      <div class="w3-bar my-margin">
-        <a href="to-do.html" class="w3-btn my-margin-small my-color">To do</a>
-        <a href="vocabulary.html" class="w3-btn my-margin-small my-color">Vocabulary</a>
-        <a href="gre-khan.html" class="w3-btn my-margin-small my-color">GRE Khan Academy</a>
-        <a href="analytical-writing.html" class="w3-btn my-margin-small my-color">Analytical Writing</a>
-        <a href="verbal-reasoning.html" class="w3-btn my-margin-small my-color">Verbal Reasoning</a>
-        <a href="quantitative-reasoning.html" class="w3-btn my-margin-small my-color">Quantitative Reasoning</a>
-        <a href="scoring-rubric.html" class="w3-btn my-margin-small my-color">Scoring Rubric</a>
-      </div>
-      <div class="w3-bar my-margin">
-        <a href="argument-example.html" class="w3-btn my-margin-small my-color">Argument Examples</a>
-        <a href="issue-example.html" class="w3-btn my-margin-small my-color">Issue Examples</a>
 
-        <a href="verbal-examples.html" class="w3-btn my-margin-small my-color">Verbal Examples</a>
-        <a href="verbal-easy.html" class="w3-btn my-margin-small my-color">Verbal Easy</a>
-        <a href="verbal-medium.html" class="w3-btn my-margin-small my-color">Verbal Medium</a>
-        <a href="verbal-hard.html" class="w3-btn my-margin-small my-color">Verbal Hard</a>
-        <a href="pq-verbal-easy.html" class="w3-btn my-margin-small my-color">PQ Verbal Easy</a>
-        <a href="pq-verbal-medium.html" class="w3-btn my-margin-small my-color">PQ Verbal Medium</a>
-        <a href="pq-verbal-hard.html" class="w3-btn my-margin-small my-color">PQ Verbal Hard</a>
+      <div class="w3-bar my-margin">
+        <a href="og-argument-example.html" class="w3-btn my-margin-small my-color">Argument Examples</a>
+        <a href="og-issue-example.html" class="w3-btn my-margin-small my-color">Issue Examples</a>
+
+        <a href="og-verbal-examples.html" class="w3-btn my-margin-small my-color">Verbal Examples</a>
+        <a href="og-verbal-easy.html" class="w3-btn my-margin-small my-color">Verbal Easy</a>
+        <a href="og-verbal-medium.html" class="w3-btn my-margin-small my-color">Verbal Medium</a>
+        <a href="og-verbal-hard.html" class="w3-btn my-margin-small my-color">Verbal Hard</a>
       </div>
     </main>
   </body>
